--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ image: "/static/images/abbas8.jpg"
     </div>
     <div class="block-content">
       <p>
-        This page highlights several of my personal software and research projects (snippets and resources). I love programming (turning everything into code), mathematics, and hacking stuff. Enjoy. :)
+        This page highlights several of my personal software and research projects (snippets and resources). I love programming (turning everything into code), mathematics, and hacking stuff. Curious for more? Don't forget to check out the "<strong>Read more</strong>" link above. Happy exploring! :)
       </p>
       <!-- <p>
         I co-founded <a class="pixelnest-logo" href="https://pixelnest.io">Pixelnest Studio</a> where I created Steredenn and numerous other projects.
@@ -25,6 +25,7 @@ image: "/static/images/abbas8.jpg"
     </div>
   </div>
 
+  
   <!-- Main projects list -->
   <!-- <div class="block">
     <div class="block-header">
