--- a/index.html
+++ b/index.html
@@ -14,14 +14,8 @@ image: "/static/images/abbas8.jpg"
     </div>
     <div class="block-content">
       <p>
-        This page highlights several of my personal software and research projects (snippets and resources). I love programming (turning everything into code), mathematics, and hacking stuff. Curious for more? Don't forget to check out the "<strong>Read more</strong>" link above. Happy exploring! :)
+        This page highlights several of my personal software and research projects (snippets and resources). I love programming (turning everything into code), mathematics, and hacking stuff. Curious for more? Don't forget to check out the <a href="/about" style="color: #F9644B;">READ MORE</a> link. Happy exploring! :)
       </p>
-      <!-- <p>
-        I co-founded <a class="pixelnest-logo" href="https://pixelnest.io">Pixelnest Studio</a> where I created Steredenn and numerous other projects.
-      </p> -->
-      <!-- <p> -->
-        <!-- You will find my projects, snippets and resources. Enjoy. :) -->
-      <!-- </p> -->
     </div>
   </div>
 
